ImageService implementation and image-processing components

--- a/myphotos-common/src/main/resources/application.properties
+++ b/myphotos-common/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-myphotos.storage.root.dir=E:/java/my-photos/storage
+myphotos.storage.root.dir=E:/java/my-photos/storage/
 myphotos.media.absolute.root=E:/java/my-photos/nginx-1.16.0/html/
 
 myphotos.host=http://myphotos.com
