--- a/myphotos-common/pom.xml
+++ b/myphotos-common/pom.xml
@@ -15,6 +15,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<thumbnailator.version>0.4.8</thumbnailator.version>
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>2.1</hamcrest.version>
 		<mockito.version>2.13.0</mockito.version>
@@ -33,6 +34,12 @@
 			<artifactId>myphotos-model</artifactId>
 			<version>1.0</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>${thumbnailator.version}</version>
 		</dependency>
 
 		<dependency>
