--- a/myphotos-web/pom.xml
+++ b/myphotos-web/pom.xml
@@ -19,6 +19,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<commons-io.version>2.6</commons-io.version>
 	</properties>
 
 	<dependencies>
@@ -28,20 +29,26 @@
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
-        <dependency>
-        	<groupId>com.revenat</groupId>
-        	<artifactId>myphotos-model</artifactId>
-        	<version>1.0</version>
-        	<scope>provided</scope>
-        </dependency>
-        
-        <dependency>
-        	<groupId>com.revenat</groupId>
-        	<artifactId>myphotos-common</artifactId>
-        	<version>1.0</version>
-        	<scope>provided</scope>
-        </dependency>
+
+		<dependency>
+			<groupId>com.revenat</groupId>
+			<artifactId>myphotos-model</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.revenat</groupId>
+			<artifactId>myphotos-common</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
