Basic functionality for sign up via google/facebook

--- a/myphotos-common/src/main/resources/application.properties
+++ b/myphotos-common/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 myphotos.storage.root.dir=E:/java/my-photos/storage/
 myphotos.media.absolute.root=E:/java/my-photos/nginx-1.16.0/html/
 
-myphotos.host=http://myphotos.com
+myphotos.host=http://localhost
 myphotos.host.rest.api=http://api.myphotos.com
 myphotos.host.soap.api=http://soap.myphotos.com/ws
 
 myphotos.profile.avatar.placeholder.url=/static/images/avatar_placeholder.jpg
 
 #https://console.developers.google.com/apis/credentials
-myphotos.social.google-plus.client-id=${google-plus.client-id}
+myphotos.social.google-plus.client-id=468437047254-c4lmn4uvmeojul666bfrghmfqugpn5es.apps.googleusercontent.com
 myphotos.social.google-plus.issuers=https://accounts.google.com,accounts.google.com
 
 #https://developers.facebook.com/apps/[your_app_number]/dashboard
-myphotos.social.facebook.client-id=your_app_id
+myphotos.social.facebook.client-id=346261002974096
 myphotos.social.facebook.client-secret=${facebook.client-secret}
+myphotos.social.facebook.redirectUrl=/from/facebook
