--- a/myphotos-common/pom.xml
+++ b/myphotos-common/pom.xml
@@ -16,6 +16,9 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<thumbnailator.version>0.4.8</thumbnailator.version>
+		<junidecode.version>0.1.1</junidecode.version>
+		<restfb.version>2.20.0</restfb.version>
+		<google-api-client.version>1.22.0</google-api-client.version>
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>2.1</hamcrest.version>
 		<mockito.version>2.13.0</mockito.version>
@@ -40,6 +43,24 @@
 			<groupId>net.coobird</groupId>
 			<artifactId>thumbnailator</artifactId>
 			<version>${thumbnailator.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.restfb</groupId>
+			<artifactId>restfb</artifactId>
+			<version>${restfb.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>${google-api-client.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.moparisthebest</groupId>
+			<artifactId>junidecode</artifactId>
+			<version>${junidecode.version}</version>
 		</dependency>
 
 		<dependency>
