--- a/myphotos-web/src/main/webapp/WEB-INF/web.xml
+++ b/myphotos-web/src/main/webapp/WEB-INF/web.xml
@@ -8,4 +8,9 @@
 	 	<url-pattern>/*</url-pattern>
 	 </filter-mapping>
 	 
+	 <filter-mapping>
+	 	<filter-name>EncodingFilter</filter-name>
+	 	<url-pattern>/*</url-pattern>
+	 </filter-mapping>
+	 
 </web-app>
