--- a/myphotos-web/pom.xml
+++ b/myphotos-web/pom.xml
@@ -21,6 +21,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<commons-io.version>2.6</commons-io.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
+		<shiro-web.version>1.3.2</shiro-web.version>
 	</properties>
 
 	<dependencies>
@@ -54,6 +55,12 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>${commons-beanutils.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>${shiro-web.version}</version>
 		</dependency>
 
 	</dependencies>
