Models and web service interfaces for WS module.

--- a/myphotos-common/pom.xml
+++ b/myphotos-common/pom.xml
@@ -19,6 +19,7 @@
 		<junidecode.version>0.1.1</junidecode.version>
 		<restfb.version>2.20.0</restfb.version>
 		<google-api-client.version>1.22.0</google-api-client.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>2.1</hamcrest.version>
 		<mockito.version>2.13.0</mockito.version>
@@ -61,6 +62,12 @@
 			<groupId>com.moparisthebest</groupId>
 			<artifactId>junidecode</artifactId>
 			<version>${junidecode.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${commons-beanutils.version}</version>
 		</dependency>
 
 		<dependency>
