--- a/myphotos-common/src/main/resources/application.properties
+++ b/myphotos-common/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 myphotos.storage.root.dir=E:/java/my-photos/storage/
 myphotos.media.absolute.root=E:/java/my-photos/nginx-1.16.0/html/
 
-myphotos.host=http://localhost
+# myphotos.host=http://localhost -  for facebook sign up
+myphotos.host=http://myphotos.com
 myphotos.host.rest.api=http://api.myphotos.com
 myphotos.host.soap.api=http://soap.myphotos.com/ws
 
