--- a/myphotos-ear/pom.xml
+++ b/myphotos-ear/pom.xml
@@ -65,15 +65,15 @@
 <!-- 						<webModule>
 							<groupId>com.revenat</groupId>
 							<artifactId>myphotos-rest</artifactId>
-							<bundleFileName>myphotos-web.war</bundleFileName>
+							<bundleFileName>myphotos-rest.war</bundleFileName>
 							<contextRoot>/api</contextRoot>
-						</webModule>
+						</webModule> -->
 						<webModule>
 							<groupId>com.revenat</groupId>
 							<artifactId>myphotos-ws</artifactId>
-							<bundleFileName>myphotos-web.war</bundleFileName>
+							<bundleFileName>myphotos-ws.war</bundleFileName>
 							<contextRoot>/ws</contextRoot>
-						</webModule> -->
+						</webModule>
 					</modules>
 				</configuration>
 			</plugin>
@@ -108,13 +108,13 @@
 			<artifactId>myphotos-rest</artifactId>
 			<version>1.0</version>
 			<type>war</type>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.revenat</groupId>
 			<artifactId>myphotos-ws</artifactId>
 			<version>1.0</version>
 			<type>war</type>
-		</dependency> -->
+		</dependency>
 	</dependencies>
 
 </project>
