--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <module>myphotos-common</module>
     <module>myphotos-ejb</module>
     <module>myphotos-web</module>
-<!--     <module>myphotos-rest</module>
-    <module>myphotos-ws</module> -->
+<!--     <module>myphotos-rest</module> -->
+    <module>myphotos-ws</module>
     <module>myphotos-ear</module>
   </modules>
 </project>
