REST module: config, models, error mappers, PublicProfileController

--- a/myphotos-ear/pom.xml
+++ b/myphotos-ear/pom.xml
@@ -62,12 +62,12 @@
 							<bundleFileName>myphotos-web.war</bundleFileName>
 							<contextRoot>/</contextRoot>
 						</webModule>
-<!-- 						<webModule>
+						<webModule>
 							<groupId>com.revenat</groupId>
 							<artifactId>myphotos-rest</artifactId>
 							<bundleFileName>myphotos-rest.war</bundleFileName>
 							<contextRoot>/api</contextRoot>
-						</webModule> -->
+ 						</webModule>
 						<webModule>
 							<groupId>com.revenat</groupId>
 							<artifactId>myphotos-ws</artifactId>
@@ -103,12 +103,12 @@
 			<version>1.0</version>
 			<type>war</type>
 		</dependency>
-<!-- 		<dependency>
+		<dependency>
 			<groupId>com.revenat</groupId>
 			<artifactId>myphotos-rest</artifactId>
 			<version>1.0</version>
 			<type>war</type>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>com.revenat</groupId>
 			<artifactId>myphotos-ws</artifactId>
