--- a/myphotos-rest/pom.xml
+++ b/myphotos-rest/pom.xml
@@ -20,6 +20,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<commons-fileupload.version>1.3.3</commons-fileupload.version>
+		<swagger-jaxrs.version>1.5.13</swagger-jaxrs.version>
 	</properties>
 
 	<dependencies>
@@ -50,6 +51,18 @@
 			<version>${commons-fileupload.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-jaxrs</artifactId>
+			<version>${swagger-jaxrs.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.main.extras</groupId>
+			<artifactId>glassfish-embedded-all</artifactId>
+			<version>4.1.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
