--- a/myphotos-ejb/pom.xml
+++ b/myphotos-ejb/pom.xml
@@ -36,6 +36,13 @@
         
         <dependency>
         	<groupId>com.revenat</groupId>
+        	<artifactId>myphotos-rmi</artifactId>
+        	<version>1.0</version>
+        	<scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+        	<groupId>com.revenat</groupId>
         	<artifactId>myphotos-common</artifactId>
         	<version>1.0</version>
         	<scope>provided</scope>
