--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,6 @@
     <module>myphotos-rest</module>
     <module>myphotos-ws</module>
     <module>myphotos-ear</module>
+    <module>myphotos-rmi</module>
   </modules>
 </project>
